# SPDX-FileCopyrightText: 2022-2023 Helmholtz-Zentrum hereon GmbH (hereon)
# SPDX-License-Identifier: CC0-1.0
# SPDX-FileContributor: Carsten Lemmen <carsten.lemmen@hereon.de

[tool.poetry]
name = "Docker file for ESMF"
version = "0.1.0"
description = "A Dockerfile for the Earth System Modeling Framework (ESMF)"
authors = ["Carsten Lemmen <carsten.lemmen@hereon.de>"]
license = "CC0-1.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
reuse = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
